# flexalign

./: Cargo.toml
src/: flexalign.rs  lib.rs  main.rs  misc.rs  options.rs  utils.rs
src/align/: alignment_worker.rs  common.rs  data_structures.rs  errors.rs  eval.rs  mod.rs  modular_workflow.rs  process_fastq.rs  sam.rs  stats.rs  workflow.rs
src/align/process/: alignment.rs  anchor_extractor.rs  anchor_sorter.rs  evaluate.rs  kmer_extractor.rs  mod.rs  output.rs  range_extractor.rs  seed_extractor.rs
src/database/: build.rs  common.rs  flexmap.rs  mod.rs
src/io/: mod.rs  output_buffer.rs
